added new notes

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -11,7 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Docker implements the Open Container Initiative (OCI) specifications. This means everything you learn in this chapter applies to other container runtimes and platforms that implement the OCI specifications."
+    "#### Docker implements the Open Container Initiative (OCI) specifications. This means everything you learn in this chapter applies to other container runtimes and platforms that implement the OCI specifications.\n",
+    "\n",
+    "#### A container is the runtime instance of an image. In the same way that you can start a virtual machine (VM) from a virtual machine template, you start one or more containers from a single image. The big difference between a VM and a container is that containers are smaller, faster, and more portable.\n",
+    "\n",
+    "#### The simplest way to start a container is with the docker run command. The command can take a lot of arguments, but in its most basic form you tell it an image to use and an app to run: docker run <image> <app>. The following command will start a new container based on the Ubuntu Linux image and start a Bash shell.\n",
+    "\n",
+    "- $ docker run -it ubuntu /bin/bash` \n",
+    "- The -it flags connect your current terminal window to the container’s shell.\n",
+    "- You can manually stop a running container with docker stop and restart it with docker start. To get rid of a container forever, you have to explicitly delete it with docker rm.\n",
+    "\n",
+    "\n",
+    "## Containers vs VMs\n",
+    "\n",
+    "#### Containers and VMs both need a host to run on. The host can be anything from your laptop, a bare metal server in your data center, or an instance in the public cloud.\n",
+    "#### Let’s assume a requirement where your business has a single physical server that needs to run 4 business applications.\n",
+    "#### In the VM model, the physical server is powered on and the hypervisor boots. Once booted, the hypervisor claims all physical resources such as CPU, RAM, storage, and network cards. It then carves these hardware resources into virtual constructs that look smell and feel exactly like the real thing. It then packages them into a software construct called a virtual machine (VM). We take those VMs and install an operating system and application on each one."
    ]
   },
   {
