added new notes

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -45,7 +45,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## This command starts a simple container that will run a containerized version of Ubuntu Linux.\n",
+    "- docker run -it ubuntu:latest /bin/bash\n",
+    "\n",
+    "#### docker run tells Docker to run a new container. The -it flags make the container interactive and attach it to your terminal. The ubuntu:latest argument tells Docker which image to use to start the container. Finally, /bin/bash is the application to run in the container.\n",
+    "\n",
+    "#### When you hit Return, the Docker client packages up the command and POSTs it to the API server running on the Docker daemon. The Docker daemon accepts the command and searches the host’s local image repository to see if it already has a copy of the image. In our example it didn’t, so it went to Docker Hub to see if it could find it there. It found it, pulled it locally, and stored it in the local cache.\n",
+    "\n",
+    "#### Typing exit while logged in to the container will terminate the Bash process and the whole container will exit (terminate). This is because a container cannot exist without its designated main process. This is true of Linux and Windows containers — killing the main process in the container will kill the container."
+   ]
   }
  ],
  "metadata": {
