added new notes

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -53,8 +53,33 @@
     "\n",
     "#### When you hit Return, the Docker client packages up the command and POSTs it to the API server running on the Docker daemon. The Docker daemon accepts the command and searches the host’s local image repository to see if it already has a copy of the image. In our example it didn’t, so it went to Docker Hub to see if it could find it there. It found it, pulled it locally, and stored it in the local cache.\n",
     "\n",
-    "#### Typing exit while logged in to the container will terminate the Bash process and the whole container will exit (terminate). This is because a container cannot exist without its designated main process. This is true of Linux and Windows containers — killing the main process in the container will kill the container."
+    "#### Typing exit while logged in to the container will terminate the Bash process and the whole container will exit (terminate). This is because a container cannot exist without its designated main process. This is true of Linux and Windows containers — killing the main process in the container will kill the container.\n",
+    "\n",
+    "- $ docker run --name percy -it ubuntu:latest /bin/bash\n",
+    "root@9cb2d2fd1d65:/#\n",
+    "\n",
+    "#### That’s the container created, and we named it “percy” for persistent. Now let’s put it to work by writing some data to it. The following procedure writes some text to a new file in the /tmp directory and verifies the operation succeeded. Be sure to run these commands from within the container you just started.\n",
+    "\n",
+    "- root@9cb2d2fd1d65:/# cd tmp\n",
+    "\n",
+    "- root@9cb2d2fd1d65:/tmp# ls -l\n",
+    "total 0\n",
+    "\n",
+    "- root@9cb2d2fd1d65:/tmp# echo \"Sunderland is the greatest football team in the world\" > newfile\n",
+    "\n",
+    "- root@9cb2d2fd1d65:/tmp# ls -l\n",
+    "total 4\n",
+    "\n",
+    "- -rw-r--r-- 1 root root 14 Apr 27 11:22 newfile\n",
+    "\n",
+    "- root@9cb2d2fd1d65:/tmp# cat newfile\n",
+    "Sunderland is the greatest football team in the world"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
