added new notes

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -73,7 +73,12 @@
     "- -rw-r--r-- 1 root root 14 Apr 27 11:22 newfile\n",
     "\n",
     "- root@9cb2d2fd1d65:/tmp# cat newfile\n",
-    "Sunderland is the greatest football team in the world"
+    "Sunderland is the greatest football team in the world\n",
+    "\n",
+    "#### The data created in this example is stored on the Docker hosts local filesystem. If the Docker host fails, the data will be lost.\n",
+    "#### Containers are designed to be immutable objects and it’s not a good practice to write data to them.\n",
+    "\n",
+    "#### For these reasons, Docker provides volumes. These exist outside of containers but can be mounted into them."
    ]
   },
   {
