added new notes

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -84,6 +84,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Stopping containers gracefully\n",
+    "\n",
+    "#### In the previous example, the container was running the /bin/bash app. When you kill a running container with docker rm <container> -f, the container is killed immediately without warning. You’re literally giving the container, and the app it’s running, no chance to complete any operations and gracefully exit.\n",
+    "\n",
+    "#### However, the docker stop command is far more polite. It gives the process inside of the container ~10 seconds to complete any final tasks and gracefully shutdown. Once the command completes, you can delete the container with docker rm.\n",
+    "\n",
+    "#### Behind the scenes the docker stop command sends a SIGTERM signal to the main application process inside the container (PID 1). This is a request to terminate and gives the process a chance to clean things up and gracefully shut itself down. If it’s still running after 10 seconds it will be issued a SIGKILL which terminates it with force.\n",
+    "\n",
+    "#### Restart policies are applied per-container. They can be configured imperatively on the command line as part of docker run commands, or declaratively in YAML files for use with higher-level tools such as Docker Swarm, Docker Compose, and Kubernetes. At the time of writing, the following restart policies exist:\n",
+    "\n",
+    "- always\n",
+    "- unless-stopped\n",
+    "- on-failure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
