added new chapter

--- a/Docker/containers.ipynb
+++ b/Docker/containers.ipynb
@@ -97,13 +97,46 @@
     "\n",
     "- always\n",
     "- unless-stopped\n",
-    "- on-failure"
+    "- on-failure\n",
+    "\n",
+    "\n",
+    "#### The always policy is the simplest. It always restarts a failed container unless it’s been explicitly stopped. An easy way to demonstrate this is to start a new interactive container with the --restart always policy and tell it to run a shell process. When the container starts you’ll be automatically attached to its shell. Typing exit from the shell will kill the container’s PID 1 process and kill the container. However, Docker will automatically restart it because it has the --restart always policy. If you issue a docker ps command, you’ll see that the container’s uptime is less than the time since it was created. Let’s put it to the test.\n",
+    "\n",
+    "- docker run --name neversaydie -it --restart always alpine sh\n",
+    "\n",
+    "#### An interesting feature of the --restart always policy is that if you stop a container with docker stop and then restart the Docker daemon, the container will be restarted. To be clear… you start a new container with the --restart always policy and then intentionally stop it with the docker stop command. At this point the container is in the Stopped (Exited) state. However, if you restart the Docker daemon, the container will be automatically restarted when the daemon comes back up. You need to be aware of this.\n",
+    "\n",
+    "#### The main difference between the always and unless-stopped policies is that containers with the --restart unless-stopped policy will not be restarted when the daemon restarts if they were in the Stopped (Exited) state. That might be a confusing sentence, so let’s walk through an example.\n",
+    "\n",
+    "#### The on-failure policy will restart a container if it exits with a non-zero exit code. It will also restart containers when the Docker daemon restarts, even ones that were in the stopped state.\n",
+    "\n",
+    "\n",
+    "#### If you are working with Docker Compose or Docker Stacks, you can apply the restart policy to a service object as follows. We’ll talk more about these technologies later in the book.\n",
+    "\n",
+    "\n",
+    "services:\n",
+    "  myservice:\n",
+    "    <Snip>\n",
+    "    restart_policy:\n",
+    "      condition: always | unless-stopped | on-failure"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "- docker run -d --name webserver -p 80:8080 \\\n",
+    "  nigelpoulton/ddd-book:web0.1\n",
+    "\n",
+    "#### Notice that your shell prompt hasn’t changed. This is because the container was started in the background with the -d flag. Starting a container like this doesn’t attach it to your terminal.\n",
+    "\n",
+    "#### We know docker run starts a new container. However, this time we give it the -d flag instead of -it. -d stands for detached or daemon mode and tells the container to run in the background. You can’t use the -d and -it flags in the same command.\n",
+    "\n",
+    "#### After that, the command names the container “webserver”. The -p flag maps port 80 on the Docker host to port 8080 inside the container. This means that traffic hitting the Docker host on port 80 will be directed to port 8080 inside of the container. The image we’re using for this container contains a web service that listens on port 8080. This means the container will come up running a web server listening on port 8080.\n",
+    "\n",
+    "#### Once the container is running, a docker ps command will show the container as running and the ports that are mapped. It’s important to know that port mappings are expressed as host-port:container-port."
+   ]
   }
  ],
  "metadata": {
