added new models

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -32,6 +32,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "cat Dockerfile\n",
+    "\n",
+    "- FROM alpine\n",
+    "- LABEL maintainer=\"nigelpoulton@hotmail.com\"\n",
+    "- RUN apk add --update nodejs npm\n",
+    "- COPY . /src\n",
+    "- WORKDIR /src\n",
+    "- RUN npm install\n",
+    "- EXPOSE 8080\n",
+    "- ENTRYPOINT [\"node\", \"./app.js\"]\n",
+    "\n",
+    "#### At a high-level, the example Dockerfile says: Start with the alpine image, make a note that “nigelpoulton@hotmail.com” is the maintainer, install Node.js and NPM, copy everything in the build context to the /src directory in the image, set the working directory as /src, install dependencies, document the app’s network port, and set app.js as the default application to run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
