added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -69,8 +69,29 @@
     "\n",
     "#### The following command will build a new image called ddd-book:ch8.1. The period (.) at the end of the command tells Docker to use the working directory as the build context. Remember, the build context is where the app and all dependencies are stored.\n",
     "#### Be sure to include the trailing period (.) and be sure to run the command from the web-app directory.\n",
-    "\n"
+    "\n",
+    "- docker build -t ddd-book:ch8.1 ."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pushing images\n",
+    "#### Once you’ve created an image, it’s a good idea to store it in a registry to keep it safe and make it available to others. Docker Hub is the most common public image registry and it’s the default push location for docker push commands.\n",
+    "#### You’ll need a Docker ID and if you want to push the image to Docker Hub. You’ll also need to tag the image appropriately.\n",
+    "\n",
+    "#### Images need to be appropriately tagged before you can push them. This is because the tag includes the following important registry-related information:\n",
+    "\n",
+    "- Registry DNS name\n",
+    "- Repository name\n",
+    "- Tag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
