added new models

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -85,7 +85,21 @@
     "\n",
     "- Registry DNS name\n",
     "- Repository name\n",
-    "- Tag"
+    "- Tag\n",
+    "\n",
+    "- docker tag <current-tag> <new-tag>.\n",
+    "\n",
+    "#### Now that the image is pushed to a registry, you can access it from anywhere with an internet connection. You can also grant other people access to pull it and push changes.\n",
+    "\n",
+    "#### The following command will start a new container called c1 based on the ddd-book:ch8.1 image you just created. It maps port 80 on the Docker host, to port 8080 inside the container. This means you’ll be able to point a web browser at the DNS name or IP address of the Docker host running the container and access the app.\n",
+    "\n",
+    "Note: If your host is already running a service on port 80 you’ll get a port is already allocated error. If this happens, specify a different port such as 5000 or 5001. For example, to map the app to port 5000 on the Docker host, use the -p 5000:8080 flag.\n",
+    "\n",
+    "- docker run -d --name c1 -p 80:8080 ddd-book:ch8.1\n",
+    "- The -d flag runs the container in the background, and the -p 80:8080 flag maps port 80 on the host to port 8080 inside the running container.\n",
+    "\n",
+    "#### Examples of instructions that create new layers are FROM, RUN, and COPY. Examples that create metadata include EXPOSE, WORKDIR, ENV, and ENTRYPOINT. The basic premise is this — if an instruction adds content such as files and programs, it will create a new layer. If it is adding instructions on how to build the image and run the container, it will create metadata.\n",
+    "\n"
    ]
   },
   {
