added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -99,7 +99,21 @@
     "- The -d flag runs the container in the background, and the -p 80:8080 flag maps port 80 on the host to port 8080 inside the running container.\n",
     "\n",
     "#### Examples of instructions that create new layers are FROM, RUN, and COPY. Examples that create metadata include EXPOSE, WORKDIR, ENV, and ENTRYPOINT. The basic premise is this — if an instruction adds content such as files and programs, it will create a new layer. If it is adding instructions on how to build the image and run the container, it will create metadata.\n",
-    "\n"
+    "\n",
+    "#### It’s considered a good practice to use images from official repositories as the base layer for new images. This is because their content is vetted and they are quick to release new versions when vulnerabilities are fixed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When it comes to Docker images, big is bad! For example:\n",
+    "\n",
+    "- Big means slow\n",
+    "- Big means more potential vulnerabilities\n",
+    "- Big means a bigger attack surface\n",
+    "\n",
+    "#### In the past, keeping images small was hard work. However, multi-stage builds make it easy. Here’s the high-level…"
    ]
   },
   {
