added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -113,7 +113,9 @@
     "- Big means more potential vulnerabilities\n",
     "- Big means a bigger attack surface\n",
     "\n",
-    "#### In the past, keeping images small was hard work. However, multi-stage builds make it easy. Here’s the high-level…"
+    "#### In the past, keeping images small was hard work. However, multi-stage builds make it easy. Here’s the high-level…\n",
+    "\n",
+    "#### Multi-stage builds have multiple FROM instructions in a single Dockerfile, and each FROM instruction is a new build stage. You can do the heavy-lifting work of building your app in a large image with all the compilers and other build tools required. You can then copy the final production app into a tiny image used for production. You can also perform build steps in parallel for faster builds."
    ]
   },
   {
