added new changes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -115,7 +115,26 @@
     "\n",
     "#### In the past, keeping images small was hard work. However, multi-stage builds make it easy. Here’s the high-level…\n",
     "\n",
-    "#### Multi-stage builds have multiple FROM instructions in a single Dockerfile, and each FROM instruction is a new build stage. You can do the heavy-lifting work of building your app in a large image with all the compilers and other build tools required. You can then copy the final production app into a tiny image used for production. You can also perform build steps in parallel for faster builds."
+    "#### Multi-stage builds have multiple FROM instructions in a single Dockerfile, and each FROM instruction is a new build stage. You can do the heavy-lifting work of building your app in a large image with all the compilers and other build tools required. You can then copy the final production app into a tiny image used for production. You can also perform build steps in parallel for faster builds.\n",
+    "\n",
+    "- FROM golang:1.20-alpine AS base\n",
+    "- WORKDIR /src\n",
+    "- COPY go.mod go.sum .\n",
+    "- RUN go mod download\n",
+    "- COPY . .\n",
+    "\n",
+    "- FROM base AS build-client\n",
+    "- RUN go build -o /bin/client ./cmd/client\n",
+    "\n",
+    "- FROM base AS build-server\n",
+    "- RUN go build -o /bin/server ./cmd/server\n",
+    "\n",
+    "- FROM scratch AS prod\n",
+    "- COPY --from=build-client /bin/client /bin/\n",
+    "- COPY --from=build-server /bin/server /bin/\n",
+    "- ENTRYPOINT [ \"/bin/server\" ]\n",
+    "\n",
+    "#### The first thing to note is that the Dockerfile has four FROM instructions. Each of these is a distinct build stage and Docker numbers them starting from 0. However, each stage has been given a friendly name."
    ]
   },
   {
