added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -134,7 +134,11 @@
     "- COPY --from=build-server /bin/server /bin/\n",
     "- ENTRYPOINT [ \"/bin/server\" ]\n",
     "\n",
-    "#### The first thing to note is that the Dockerfile has four FROM instructions. Each of these is a distinct build stage and Docker numbers them starting from 0. However, each stage has been given a friendly name."
+    "#### The first thing to note is that the Dockerfile has four FROM instructions. Each of these is a distinct build stage and Docker numbers them starting from 0. However, each stage has been given a friendly name.\n",
+    "- Stage 0 is called base\n",
+    "- Stage 1 is called build-client\n",
+    "- Stage 2 is called build-server\n",
+    "- Stage 3 is called prod"
    ]
   },
   {
