added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -138,7 +138,13 @@
     "- Stage 0 is called base\n",
     "- Stage 1 is called build-client\n",
     "- Stage 2 is called build-server\n",
-    "- Stage 3 is called prod"
+    "- Stage 3 is called prod\n",
+    "\n",
+    "#### The goal of the base stage is to create a reusable build image with all the tools needed to build the application in the later stages. The image created by this stage will only be used to build the app and not used for production.\n",
+    "\n",
+    "#### It pulls the golang:1.20-alpine image which is over 250MB when uncompressed on the host. It sets the working directory to /src and copies in the go.mod and go.sum files. These list the application dependencies and hashes. Next, it installs the dependencies and copies the app code into the image. This stage will add three new layers containing a lot of build stuff but not very much app code. When this build stage is complete it will output a large image that can be used by later stages.\n",
+    "\n",
+    "#### The build-client stage doesn’t pull a new image. Instead, it uses the FROM base AS build-client instruction to use the intermediate image created by the base stage. It then uses a RUN instruction to build the client app into a binary executable. The goal of this stage is to create an image with the compiled client binary that can be referenced by later build stages."
    ]
   },
   {
