added new models

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -144,7 +144,15 @@
     "\n",
     "#### It pulls the golang:1.20-alpine image which is over 250MB when uncompressed on the host. It sets the working directory to /src and copies in the go.mod and go.sum files. These list the application dependencies and hashes. Next, it installs the dependencies and copies the app code into the image. This stage will add three new layers containing a lot of build stuff but not very much app code. When this build stage is complete it will output a large image that can be used by later stages.\n",
     "\n",
-    "#### The build-client stage doesn’t pull a new image. Instead, it uses the FROM base AS build-client instruction to use the intermediate image created by the base stage. It then uses a RUN instruction to build the client app into a binary executable. The goal of this stage is to create an image with the compiled client binary that can be referenced by later build stages."
+    "#### The build-client stage doesn’t pull a new image. Instead, it uses the FROM base AS build-client instruction to use the intermediate image created by the base stage. It then uses a RUN instruction to build the client app into a binary executable. The goal of this stage is to create an image with the compiled client binary that can be referenced by later build stages.\n",
+    "\n",
+    "#### The build-server stage does the same for the server component of the app and outputs an image that can be referenced by later stages as build-server\n",
+    "\n",
+    "#### The build-client and build-server stages can run in parallel, speeding up your build process.\n",
+    "\n",
+    "#### The prod stage pulls the minimal scratch image. It then uses the COPY --from instruction to copy the compiled client app from the build-client stage and the compiled server app from the build-server stage. It outputs the final image which is just the client and server apps in a tiny scratch image.\n",
+    "\n",
+    "#### The build-server stage does the same for the server component of the app and outputs an image that can be referenced by later stages as build-server"
    ]
   },
   {
