--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -152,7 +152,9 @@
     "\n",
     "#### The prod stage pulls the minimal scratch image. It then uses the COPY --from instruction to copy the compiled client app from the build-client stage and the compiled server app from the build-server stage. It outputs the final image which is just the client and server apps in a tiny scratch image.\n",
     "\n",
-    "#### The build-server stage does the same for the server component of the app and outputs an image that can be referenced by later stages as build-server"
+    "#### The build-server stage does the same for the server component of the app and outputs an image that can be referenced by later stages as build-server\n",
+    "\n",
+    "#### The prod stage pulls the minimal scratch image. It then uses the COPY --from instruction to copy the compiled client app from the build-client stage and the compiled server app from the build-server stage. It outputs the final image which is just the client and server apps in a tiny scratch image."
    ]
   },
   {
