added new notes

--- a/Docker/Containerizing app.ipynb
+++ b/Docker/Containerizing app.ipynb
@@ -162,6 +162,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### docker build is the command that reads a Dockerfile and containerizes an application. The -t flag tags the image, and the -f flag lets you specify the name and location of the Dockerfile. With the -f flag, you can use a Dockerfile with an arbitrary name and in an arbitrary location. The build context is where your application files exist and can be a directory on your local Docker host or a remote Git repo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
