--- a/Mathematics/Linear-Algebra/Orthogonal-Decomposition.ipynb
+++ b/Mathematics/Linear-Algebra/Orthogonal-Decomposition.ipynb
@@ -23,7 +23,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.-1"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
