--- a/Mathematics/Linear-Algebra/SVD.ipynb
+++ b/Mathematics/Linear-Algebra/SVD.ipynb
@@ -31,7 +31,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.-1"
+   "version": "3.9.undefined"
   }
  },
  "nbformat": 4,
