added new notes

--- a/Docker/Multi-Container-Compose.ipynb
+++ b/Docker/Multi-Container-Compose.ipynb
@@ -24,6 +24,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## The services section has two second-level keys:\n",
+    "\n",
+    "- web-fe\n",
+    "- redis\n",
+    "\n",
+    "#### Each of these defines a microservice. It’s important to know that Compose will deploy each of these as its own container and will use the name of the keys in the container names. In our example, we’ve defined two keys: web-fe and redis. This means Compose will deploy two containers, one will have web-fe in its name and the other will have redis.\n",
+    "\n",
+    "#### ports: The example in our Compose file tells Docker to map port 8080 inside the container (target) to port 5001 on the host (published). This means traffic hitting the Docker host on port 5001 will be directed to port 8080 on the container. The app inside the container listens on port 8080.\n",
+    "\n",
+    "#### networks: Tells Docker which network to attach the service’s containers to. The network should already exist or be defined in the networks top-level key. If it’s an overlay network, it will need to have the attachable flag so that standalone containers can be attached to it (Compose deploys standalone containers instead of Docker Services)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
